align fix

--- a/src/components/EventPreview/index.module.scss
+++ b/src/components/EventPreview/index.module.scss
@@ -10,7 +10,7 @@
     font-size: 0.8em;
 }
 .item {
-    text-align: center;
+    text-align: left;
     border: 1px solid black;
     border-radius: 15px;
     margin: 3px auto;
